Work on update_url

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -48,8 +48,10 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+	rm -f stubs/*
 
 html:
+	rm -f stubs/*
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
